# ieee118_power_flow_data

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  README.md  convention.md  definitions.py  dvc.yaml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: create_release.yaml  publish_dataset.yaml  publish_samples.yaml  tests.yaml
data/checks/: .gitignore
data/interim/: .gitignore
data/parsed/: .gitignore
data/prepared/: .gitignore
data/raw/: .gitignore  jeas118.dvc  nrel118.dvc
data/raw/jeas118/: JEAS_IEEE118.doc  JEAS_IEEE118.docx  README.md  readme.txt
data/raw/manual/: .gitignore  bus_coordinates.csv  bus_coordinates.csv.dvc
data/raw/nrel118/: README.md  plexos-export.xls  readme.txt
data/transformed/: .gitignore
notebooks/: explore_nrel118_data.ipynb  observe_nrel118_data.ipynb  prepare_power_flow_data.ipynb
resources/: data_description.md
scripts/: download_jeas118.py  download_nrel118.py
src/data/: __init__.py  check_branches.py  check_gens.py  check_gens_ts.py  check_loads.py  check_loads_ts.py  check_plants.py  check_plants_ts.py  check_ts.py  download_nrel118.py  parse_jeas118_lines.py  parse_jeas118_loads.py  parse_jeas118_trafos.py  parse_nrel118_buses.py  parse_nrel118_escalator_ts.py  parse_nrel118_escalators_ts.py  parse_nrel118_gens.py  parse_nrel118_hydro_nondisp_ts.py  parse_nrel118_hydro_ts.py  parse_nrel118_hydros_nondisp_ts.py  parse_nrel118_hydros_ts.py  parse_nrel118_lines.py  parse_nrel118_load_ts.py  parse_nrel118_loads_ts.py  parse_nrel118_outage_ts.py  parse_nrel118_outages_ts.py  parse_nrel118_solar_ts.py  parse_nrel118_solars_ts.py  parse_nrel118_wind_ts.py  parse_nrel118_winds_ts.py  prepare_branches.py  prepare_buses.py  prepare_gens.py  prepare_gens_ts.py  prepare_loads.py  prepare_loads_ts.py  prepare_plants.py  prepare_plants_ts.py  transform_gens.py  transform_gens_escalated_ts.py  (+3 more)
src/data/check/: branches.py  buses.py  gens.py  gens_ts.py  loads.py  loads_ts.py  ts.py
src/data/download/: bus_coordinates.py  jeas118.py  nrel118.py
src/data/parse/: jeas118_buses.py  jeas118_lines.py  jeas118_loads.py  jeas118_trafos.py  nrel118_buses.py  nrel118_escalators_ts.py  nrel118_gens.py  nrel118_hydros_nondisp_ts.py  nrel118_hydros_ts.py  nrel118_lines.py  nrel118_loads_ts.py  nrel118_outages_ts.py  nrel118_solars_ts.py  nrel118_winds_ts.py
src/data/prepare/: branches.py  buses.py  gens.py  gens_ts.py  loads.py  loads_ts.py
src/data/transform/: gens.py  gens_ts.py  (+3 more)
src/model/: building.py  sampling.py
src/power_flow/: building.py
src/utils/: app_logger.py  common_names.py  converters.py  data_loader.py  download_file.py
utils/: download_nrel118.py
(+12 files in other folders)
